# hr-langgraph-gspread-pypdf

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  langgraph.json  main.py  output.json  pdf_extractor.py  pyproject.toml  requirements.txt
agents/: agents.py
model/: models.py
tools/: google_sheets.py  merm.py  pdf_extractor.py
