[project]
name = "langgraph-streamlit-memory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.13",
    "langchain-core",
    "langchain-google-genai",
    "pydantic>=2.13.4",
    "pydantic-core",
    "dotenv",
    "langchain-community",
    "ddgs",
    "grandalf",
    "langchain-unstructured[local]",
    "unstructured",
    "gspread"

]
